# mush

./: .gitignore  .main.c.kate-swp  CMakeLists.txt  CMakeLists.txt~  README.md  historial  main.c  main.c~  mush.kdev4
.kdev4/: mush.kdev4
include/: builtin.h  commands.h  commands.h~  get_command.h  get_command.h~  parser.h  parser.h~
src/: CMakeLists.txt  CMakeLists.txt~  builtin.c  commands.c  commands.c~  get_command.c  get_command.c~  parser.c  parser.c~
